assets/css/admin/admin-style.css
/**
 * CaGov\Grants - Admin Styles
 */

@import "@10up/component-tooltip";

a.a11y-tip__trigger {
	text-decoration: none;
}

[role="tooltip"].a11y-tip__help {
	font-weight: 400;
	min-width: 360px;
	padding: 1.5em;
	z-index: 100000;
}

.error-message.srt {
	display: none;
}

th.required::before {
	content: "*";
}

.form-field-group-wrapper > td {
	border: 1px solid;
	display: block;
}

